@@ -112,17 +112,15 @@ public class SecurityConfig {
 
     /**
      * CORS 配置
+     * 注意：simple-game 使用 JWT Bearer Token，不依赖 Cookie，无需 allowCredentials
+     * 使用 allowedOriginPatterns("*") 放通所有来源（通过 Nginx 代理部署）
      */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // 允许的源（使用 allowedOriginPatterns 而不是 allowedOrigins，以支持通配符和 allowCredentials）
-        configuration.setAllowedOriginPatterns(List.of(
-            "http://localhost:*",
-            "http://127.0.0.1:*",
-            "https://*.kids-game.com"
-        ));
+        // 放通所有来源（JWT 无状态，无需限制 Origin）
+        configuration.setAllowedOriginPatterns(List.of("*"));
         
         // 允许的方法
         configuration.setAllowedMethods(Arrays.asList(
@@ -130,16 +128,7 @@ public class SecurityConfig {
         ));
         
         // 允许的头部
-        configuration.setAllowedHeaders(Arrays.asList(
-            "Authorization",
-            "Content-Type",
-            "X-Requested-With",
-            "Accept",
-            "Origin",
-            "Access-Control-Request-Method",
-            "Access-Control-Request-Headers",
-            "X-Device-Fingerprint"
-        ));
+        configuration.setAllowedHeaders(List.of("*"));
         
         // 暴露的头部
         configuration.setExposedHeaders(Arrays.asList(
@@ -147,8 +136,8 @@ public class SecurityConfig {
             "X-Refresh-Token"
         ));
         
-        // 允许携带凭证（必须与 allowedOriginPatterns 一起使用，不能与 allowedOrigins("*") 一起使用）
-        configuration.setAllowCredentials(true);
+        // 注意：allowedOriginPatterns("*") 时不能设置 allowCredentials(true)
+        // simple-game 使用 JWT Bearer Token，不需要 credentials
         
         // 预检请求缓存时间
         configuration.setMaxAge(3600L);
